--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
         "@rocketseat/eslint-config/node"
     ], 
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "camelcase": "off"
     }
 }
